- finalized ExamController and ExamService.
