# exam-manage-service/src/main/resources/api/openapi.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
     title: Exam manager - OpenAPI 3.0
     description: |-
-        API for exam-manager-service
+        API for exam-manager-service.
     license:
         name: Apache 2.0
         url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -12,19 +12,38 @@ servers:
     - url: https://localhost:8080/manage
 tags:
     - name: exam
-      description: operations with exams
+      description: Operations with exams.
     - name: test
-      description: test creating, updating and other opartions
+      description: Operations with tests.
 paths:
     /exam:
+        get:
+            tags:
+                - exam
+            summary: Get all exams
+            description: Endpoint for getting all exams with theirs tasks and tests.
+            operationId: getAllExams
+            responses:
+                '200':
+                    description: Successful operation.
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    $ref: '#/components/schemas/ExamComponent'
+                '400':
+                    description: Bad Request. The request was invalid or malformed.
+                '405':
+                    description: The specified HTTP method is not supported for this resource.
         post:
             tags:
                 - exam
-            summary: Create a new exam
-            description: create a new exam
+            summary: Creating a new exam
+            description: Endpoint for creating a new exam. Requires a JSON payload with exam details in the request body.
             operationId: createExam
             requestBody:
-                description: For exam creating
+                description: JSON payload containing Exam its tasks(optional) and their tests(optional).
                 content:
                     application/json:
                         schema:
@@ -32,13 +51,87 @@ paths:
                 required: true
             responses:
                 '200':
-                    description: Successful operation
+                    description: Successful operation.
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/ExamComponent'
+                '400':
+                    description: Bad Request. The request was invalid or malformed.
                 '405':
-                    description: Invalid input
+                    description: The specified HTTP method is not supported for this resource.
+    /exam/{exam_id}:
+        get:
+            tags:
+                - exam
+            summary: Get an exam by id
+            description: Endpoint for getting exam with theirs tasks and tests by id.
+            operationId: getExam
+            parameters:
+                - name: exam_id
+                  in: path
+                  required: true
+                  schema:
+                      type: integer
+                      format: int64
+            responses:
+                '200':
+                    description: Successful operation.
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ExamComponent'
+                '400':
+                    description: Bad Request. The request was invalid or malformed.
+                '405':
+                    description: The specified HTTP method is not supported for this resource.
+
+        delete:
+            tags:
+                - exam
+            summary: Delete an exam
+            description: Endpoint for exam deleting.
+            operationId: deleteExam
+            parameters:
+                - name: exam_id
+                  in: path
+                  required: true
+                  schema:
+                      type: integer
+                      format: int64
+            responses:
+                '200':
+                    description: Successful operation.
+                '405':
+                    description: Invalid id or the specified HTTP method is not supported for this resource.
+
+    /exam/examine/{examiner_id}:
+        get:
+            tags:
+                - exam
+            summary: Get exams by examiner id
+            description: Endpoint for getting exams with theirs tasks and tests by examiner id.
+            operationId: getExamsForExaminer
+            parameters:
+                - name: examiner_id
+                  in: path
+                  required: true
+                  schema:
+                      type: integer
+                      format: int64
+            responses:
+                '200':
+                    description: Successful operation.
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    $ref: '#/components/schemas/ExamComponent'
+                '400':
+                    description: Bad Request. The request was invalid or malformed.
+                '405':
+                    description: The specified HTTP method is not supported for this resource.
 
     /test/{test_id}:
         get:
@@ -71,7 +164,6 @@ components:
                 - examiner_id
                 - name
                 - programming_language
-                - tasks
             properties:
                 id:
                     type: integer
@@ -112,9 +204,12 @@ components:
             type: object
             required:
                 - name
-                - tests
             properties:
                 id:
+                    type: integer
+                    format: int64
+                    example: 10
+                exam_id:
                     type: integer
                     format: int64
                     example: 10
